--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,6 +16,7 @@
       <li><a routerLink="/skills" routerLinkActive="active" (click)="closeMenu()">{{ translations.nav.skills }}</a></li>
       <li><a routerLink="/projects" routerLinkActive="active" (click)="closeMenu()">{{ translations.nav.projects }}</a></li>
       <li><a routerLink="/testimonials" routerLinkActive="active" (click)="closeMenu()">{{ translations.nav.testimonials }}</a></li>
+      <li><a routerLink="/networking" routerLinkActive="active" (click)="closeMenu()">{{ translations.nav.networking }}</a></li>
       <li><a routerLink="/demo" routerLinkActive="active" (click)="closeMenu()">{{ translations.nav.demo }}</a></li>
       <li><a routerLink="/about" routerLinkActive="active" (click)="closeMenu()">{{ translations.nav.about }}</a></li>
       <li><a routerLink="/contact" routerLinkActive="active" (click)="closeMenu()">{{ translations.nav.contact }}</a></li>
